--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,87 @@
- body{
-    background: linear-gradient(to bottom right, #00ff99 0%, #99ccff 100%);
-   background-repeat:no-repeat;
-           color:black;
-         
-       } 
-       h1{
-           font-style:italic;
-           color:black;
-       }
-       h2{
-           font-style:italic;
-           color:black;
+ body {
+  background: linear-gradient(to bottom right, #00ff99 0%, #99ccff 100%);
+  background-repeat: no-repeat;
+  color: black;
+  margin: 20px;
 
-       } 
-       h3{
-           font-style:italic;
-           color:black;
-       }
-       
-           
-       p{
-           color:red;
-           font-size:20px;
-       }
-           
-           #div1{
-               width:600px;
-               height:600px;
-               border:4px solid white;
-               color:blue;
-               background-color:white;
-               
-           }
-           #divv{
+ }
 
-               height:100px;
-              border:5px solid green;
-              margin-right:20px;
-              margin-left:15px;
-               padding-left:50px;
-              padding-right:50px;
-              padding-top:30px;
-              padding-bottom:20px;
-           }
-           #dot{
-             
-               color:black;
-               width:100px;
-               height:50px;
-               display:inline;
-               background-color:blue;
-           }
-           #dot1{
-             
-               color:gray;
-               width:100px;
-               height:50px;
-               display:block ;
-               background-color:green;
-           }
-           span{
-               background-color:cadetblue;
-           }
-           
-           img{
-            height:50px;
-            width:50px;
-            padding-right:25px;
-        }
-        .ooo li{
-            padding-right:20px;display=inline;vertical-align: middle;
-        }
-     
+ h1 {
+  font-style: italic;
+  color: black;
+ }
+
+ h2 {
+  font-style: italic;
+  color: black;
+
+ }
+
+ h3 {
+  font-style: italic;
+  color: black;
+ }
+
+
+ p {
+  color: red;
+  font-size: 20px;
+ }
+
+ #div1 {
+  width: 600px;
+  height: 600px;
+  border: 4px solid white;
+  color: blue;
+  background-color: white;
+
+ }
+
+ #divv {
+
+  height: 100px;
+  border: 5px solid green;
+  margin-right: 20px;
+  margin-left: 15px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 30px;
+  padding-bottom: 20px;
+ }
+
+ #dot {
+
+  color: black;
+  width: 100px;
+  height: 50px;
+  display: inline;
+  background-color: blue;
+ }
+
+ #dot1 {
+
+  color: gray;
+  width: 100px;
+  height: 50px;
+  display: block;
+  background-color: green;
+ }
+
+ span {
+  background-color: cadetblue;
+  height: 10px;
+
+ }
+
+ img {
+  height: 50px;
+  width: 50px;
+  padding-right: 10px;
+ }
+
+ .ooo li {
+  padding-right: 20px;
+  display=inline-block;
+  vertical-align: middle;
+ }
+ 
