--- a/assignment-12/assignment12.css
+++ b/assignment-12/assignment12.css
@@ -1,3 +1,8 @@
+* {
+    margin-bottom: 10px;
+
+}
+
 .image-1 {
     height: 30px;
     width: 30px;
@@ -15,14 +20,27 @@
 }
 
 .row-3,
-.row-4 {
+.row-4,
+.row-5,
+.row-6,
+.row-7,
+.row-8,
+.row-9,
+.row-11,
+.row-12,
+.row-16 {
     text-align: center;
 }
 
 .row-2,
 .row-3,
-.row-4 {
-    margin-bottom: 50px;
+.row-4,
+.row-5,
+.row-6,
+.row-7,
+.row-8,
+.row-9 {
+    margin-bottom: 30px;
 }
 
 .row-1,
@@ -43,4 +61,63 @@
 .shrink {
     margin-left: auto;
     margin-right: auto;
+}
+
+.row-2 {
+    padding-top: 10px;
+}
+
+.float {
+    float: right;
+}
+
+.image-5 {
+    height: 250px;
+    width: 250px;
+}
+
+.image-6 {
+    height: 50px;
+    width: 70px;
+}
+
+.row-3,
+.row-5,
+.row-6,
+.row-8,
+.row-10,
+.row-11,
+.row-17 {
+    background-color: whitesmoke;
+
+}
+
+.column1 {
+    padding-top: 120px;
+
+}
+
+.padd {
+    padding: 60px;
+}
+
+.image11 {
+    height: 150px;
+    width: 150px;
+}
+
+.margin {
+    margin-bottom: 20px;
+}
+
+.padding {
+    padding-top: 50px;
+}
+
+.bg {
+    background-color: whitesmoke;
+}
+
+.right {
+    padding-right: 10px;
 }
